--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="/dist/css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="dist/css/app.css">
     <title>
-        Tailwindx CSS Boilerplate (PostCSS + Browsersync + Gulp 4 + Imagemin)
+        Hello Tailwind!
     </title>
 </head>
-<body>
-
+<body class="bg-gray-400">
+<h1 class="hello">Helow</h1>
 </body>
 </html>
