--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
         Hello Tailwind!
     </title>
 </head>
-<body class="bg-gray-400">
-<h1 class="hello">Helow</h1>
+<body class="bg-gray-100">
+    <div class="px-8 py-12"> <!--p-*, pt, pl, pr, pb,  -->
+        <img class="h-10" src="dist/images/logo.svg" alt="work logo"/> <!-- height -->
+        <img class="mt-6 rounded-lg shadow-2xl" src="dist/images/beach-work.jpg" alt="beach"/>
+        <h1 class="mt-6 text-2xl font-bold text-gray-900">You can be work here too! <span class="text-indigo-500">Prepare yourskill!</span></h1>
+        <p class="mt-2">
+            Create a new folder in our project's root directory named assets. We will be using this folder for storing all assets required in the project. Within this new folder, create separate folders for css & images. The compiled version of our CSS file will be stored in this folder by gulp task.
+        </p>
+
+    </div>
+
 </body>
 </html>
